--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:textColor="@color/white"
+        android:textSize="22sp"
         android:text="POINT A"
         app:backgroundTint="@color/greenDark"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textSize="22sp"
         android:text="POINT B"
         app:cornerRadius="0dp"
         app:backgroundTint="@color/greenDark"
@@ -38,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="65dp"
         android:layout_marginBottom="50dp"
+        android:textSize="22sp"
         android:text="RESET"
         app:backgroundTint="@color/greenDark"
         app:cornerRadius="0dp"
@@ -64,7 +67,7 @@
             android:shadowRadius="3"
             android:text="3"
             android:textColor="@color/Yellow"
-            android:textSize="20sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <RadioButton
@@ -77,16 +80,18 @@
             android:shadowRadius="3"
             android:text="5"
             android:textColor="@color/Yellow"
-            android:textSize="20sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
     </RadioGroup>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutScoreAndSets"
-        android:layout_width="280dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="70dp"
+        android:layout_width="0dp"
+        android:layout_height="220dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -94,28 +99,197 @@
             android:id="@+id/lblScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="20dp"
             android:text="Score"
-            android:textSize="18sp"
-            android:textStyle="bold"
             android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/scoreA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="0"
-            android:textSize="45sp"
-            android:textColor="@color/Yellow"
             android:background="@color/Brown"
-            android:padding="3dp"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="2dp"
+            android:text="0"
+            android:textColor="@color/Yellow"
+            android:textSize="55sp"
             app:layout_constraintEnd_toEndOf="@+id/lblScore"
             app:layout_constraintStart_toStartOf="@+id/lblScore"
             app:layout_constraintTop_toBottomOf="@+id/lblScore" />
+
+        <TextView
+            android:id="@+id/scoreB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/Brown"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="2dp"
+            android:text="0"
+            android:textColor="@color/Yellow"
+            android:textSize="55sp"
+            app:layout_constraintEnd_toEndOf="@+id/scoreA"
+            app:layout_constraintStart_toStartOf="@+id/scoreA"
+            app:layout_constraintTop_toBottomOf="@+id/scoreA" />
+
+        <TextView
+            android:id="@+id/lblSets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sets"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/lblScore"
+            app:layout_constraintEnd_toEndOf="@+id/setsA"
+            app:layout_constraintStart_toStartOf="@+id/setsA"
+            app:layout_constraintTop_toTopOf="@+id/lblScore" />
+
+        <LinearLayout
+            android:id="@+id/setsA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginEnd="30dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/scoreA"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/scoreA">
+
+            <TextView
+                android:id="@+id/setsA1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp" />
+
+            <TextView
+                android:id="@+id/setsA2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp" />
+
+            <TextView
+                android:id="@+id/setsA3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp" />
+
+            <TextView
+                android:id="@+id/setsA4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/setsA5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/setsB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+
+            app:layout_constraintBottom_toBottomOf="@+id/scoreB"
+            app:layout_constraintEnd_toEndOf="@+id/setsA"
+            app:layout_constraintStart_toStartOf="@+id/setsA"
+            app:layout_constraintTop_toTopOf="@+id/scoreB">
+
+            <TextView
+                android:id="@+id/setsB1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp" />
+
+            <TextView
+                android:id="@+id/setsB2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp" />
+
+            <TextView
+                android:id="@+id/setsB3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp" />
+
+            <TextView
+                android:id="@+id/setsB4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/setsB5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/Brown"
+                android:paddingHorizontal="6dp"
+                android:paddingVertical="2dp"
+                android:text="0"
+                android:textColor="@color/Yellow"
+                android:textSize="55sp"
+                android:visibility="gone" />
+        </LinearLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
