--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="@color/greenLight"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".TennisScoreActivity">
 
     <Button
         android:id="@+id/BtnPointA"
@@ -62,6 +62,7 @@
             android:id="@+id/radBut3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:shadowColor="@color/black"
             android:shadowDx="2"
             android:shadowDy="2"
